<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".second"
    android:background="@color/blue">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/appCompatButton"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:backgroundTint="@color/green"
        android:text="@string/rachet"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:onClick="apply"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.868"
        ></androidx.appcompat.widget.AppCompatButton>

    <TextView
        android:layout_width="244dp"
        android:layout_height="37dp"
        android:text="@string/select"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.646"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053"></TextView>

    <ImageView
        android:layout_width="460dp"
        android:layout_height="265dp"
        android:id="@+id/imgs"
        android:src="@drawable/circus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.253"></ImageView>

    <Spinner
        android:layout_width="300dp"
        android:layout_height="45dp"
        android:background="@color/white"
        android:id="@+id/spins"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.626"
        />

    <EditText

        android:layout_width="300dp"
android:id="@+id/raschet"
        android:layout_height="45dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        android:hint="@string/dannie"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.733"></EditText
>

</androidx.constraintlayout.widget.ConstraintLayout>